Definition of FlowOne

--- a/note/tutorial/quickstart.ipynb
+++ b/note/tutorial/quickstart.ipynb
@@ -780,19 +780,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "\n",
+    "\n",
+    "class FlowOne(Flow):\n",
+    "    def __init__(self, identifier=None, root_levels_up=2, **kwargs):\n",
+    "        self.identifier = identifier\n",
+    "        self.root_levels_up = root_levels_up\n",
+    "\n",
+    "        super().__init__(log_filepath=self.log_fp, flow_filepath=flow_fp, **kwargs)\n",
+    "        return\n",
+    "\n",
+    "    # Bookkeeping\n",
+    "    @property\n",
+    "    def identifier(self):\n",
+    "        return self._identifier\n",
+    "\n",
+    "    @identifier.setter\n",
+    "    def identifier(self, value):\n",
+    "        if isinstance(value, str):\n",
+    "            self._identifier = value\n",
+    "        elif value is None:\n",
+    "            self._identifier = self._default_identifier\n",
+    "        else:\n",
+    "            raise ValueError(\"Identifier needs to be string.\")\n",
+    "\n",
+    "    @property\n",
+    "    def _default_identifier(self):\n",
+    "        return self.__class__.__name__\n",
+    "\n",
+    "    # Filesystem-MGMT\n",
+    "    @property\n",
+    "    def root_dp(self):\n",
+    "        \"\"\"Root directory path\"\"\"\n",
+    "        return Path().absolute().parents[self.root_levels_up - 1]\n",
+    "\n",
+    "    @property\n",
+    "    def out_dp(self):\n",
+    "        return self._out_dp\n",
+    "\n",
+    "    @out_dp.setter\n",
+    "    def out_dp(self, value):\n",
+    "        if isinstance(fp, Path):\n",
+    "            self._out_dp = value\n",
+    "        elif isinstance(fp, str):\n",
+    "            self._out_dp = Path(value)\n",
+    "        elif value is None:\n",
+    "            self._out_dp = self._default_out_dp\n",
+    "        else:\n",
+    "            raise ValueError(\"out_dp needs to be string.\")\n",
+    "\n",
+    "    @property\n",
+    "    def _default_out_dp(self):\n",
+    "        return self.root_dp / \"out\" / self.identifier\n",
+    "\n",
+    "    @property\n",
+    "    def _flow_dp(self):\n",
+    "        \"\"\"Flow dirpath\"\"\"\n",
+    "        return self.out_dp / \"flow\"\n",
+    "\n",
+    "    @property\n",
+    "    def _log_dp(self):\n",
+    "        \"\"\"Log dirpath\"\"\"\n",
+    "        return self.out_dp / \"log\"\n",
+    "\n",
+    "    @property\n",
+    "    def _flow_fp(self):\n",
+    "        \"\"\"Flow filepath\"\"\"\n",
+    "        return self._flow_dp / (self.identifier + \".pkl\")\n",
+    "\n",
+    "    @property\n",
+    "    def _log_dp(self):\n",
+    "        \"\"\"Log dirpath\"\"\"\n",
+    "        return self._log_dp / self.identifier"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fp = Path().parent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dp = "
+   ]
   },
   {
    "cell_type": "code",
@@ -805,7 +906,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Deeper dive into the Executors\n",
+    "### \"Deep-dive\" into the Executors\n",
     "\n",
     "One of `affe`'s key contributions is its strict separation between three related things: _definition_ of a workflow, _actual execution of a workflow_ and lastly _scheduling multiple workflows_. \n",
     "\n",
