--- a/note/tutorial/quickstart.ipynb
+++ b/note/tutorial/quickstart.ipynb
@@ -771,119 +771,86 @@
    "source": [
     "### Filesystem Management\n",
     "\n",
-    "This is not _by default_ in a Flow object, in order to keep things clean. However, you can quickly and easily define a base folder in which affe is supposed to drop all its outputs.\n",
+    "This is not _by default_ in a Flow object, in order to keep things clean. However, there exists another object, which is called `FlowOne`. This is still very much a bare-bones object: it is a subclass of Flow, with some minimal bookkeeping for a common experimental filesystem configuration baked in.\n",
     "\n",
-    "To demonstrate, we will here define the `out`directory in the current directory as the destination for all of its outputs.\n",
+    "In that way, it becomes a very nice starting point for future extensions.\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "\n",
-    "\n",
-    "class FlowOne(Flow):\n",
-    "    def __init__(self, identifier=None, root_levels_up=2, **kwargs):\n",
-    "        self.identifier = identifier\n",
-    "        self.root_levels_up = root_levels_up\n",
-    "\n",
-    "        super().__init__(log_filepath=self.log_fp, flow_filepath=flow_fp, **kwargs)\n",
-    "        return\n",
-    "\n",
-    "    # Bookkeeping\n",
-    "    @property\n",
-    "    def identifier(self):\n",
-    "        return self._identifier\n",
-    "\n",
-    "    @identifier.setter\n",
-    "    def identifier(self, value):\n",
-    "        if isinstance(value, str):\n",
-    "            self._identifier = value\n",
-    "        elif value is None:\n",
-    "            self._identifier = self._default_identifier\n",
-    "        else:\n",
-    "            raise ValueError(\"Identifier needs to be string.\")\n",
-    "\n",
-    "    @property\n",
-    "    def _default_identifier(self):\n",
-    "        return self.__class__.__name__\n",
-    "\n",
-    "    # Filesystem-MGMT\n",
-    "    @property\n",
-    "    def root_dp(self):\n",
-    "        \"\"\"Root directory path\"\"\"\n",
-    "        return Path().absolute().parents[self.root_levels_up - 1]\n",
-    "\n",
-    "    @property\n",
-    "    def out_dp(self):\n",
-    "        return self._out_dp\n",
-    "\n",
-    "    @out_dp.setter\n",
-    "    def out_dp(self, value):\n",
-    "        if isinstance(fp, Path):\n",
-    "            self._out_dp = value\n",
-    "        elif isinstance(fp, str):\n",
-    "            self._out_dp = Path(value)\n",
-    "        elif value is None:\n",
-    "            self._out_dp = self._default_out_dp\n",
-    "        else:\n",
-    "            raise ValueError(\"out_dp needs to be string.\")\n",
-    "\n",
-    "    @property\n",
-    "    def _default_out_dp(self):\n",
-    "        return self.root_dp / \"out\" / self.identifier\n",
-    "\n",
-    "    @property\n",
-    "    def _flow_dp(self):\n",
-    "        \"\"\"Flow dirpath\"\"\"\n",
-    "        return self.out_dp / \"flow\"\n",
-    "\n",
-    "    @property\n",
-    "    def _log_dp(self):\n",
-    "        \"\"\"Log dirpath\"\"\"\n",
-    "        return self.out_dp / \"log\"\n",
-    "\n",
-    "    @property\n",
-    "    def _flow_fp(self):\n",
-    "        \"\"\"Flow filepath\"\"\"\n",
-    "        return self._flow_dp / (self.identifier + \".pkl\")\n",
-    "\n",
-    "    @property\n",
-    "    def _log_dp(self):\n",
-    "        \"\"\"Log dirpath\"\"\"\n",
-    "        return self._log_dp / self.identifier"
+    "from affe.flow import FlowOne"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fp = Path().parent"
+    "def hello_world(config):\n",
+    "    print(\"Hello World\")\n",
+    "    return\n",
+    "\n",
+    "\n",
+    "f = FlowOne(flow=hello_world)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "PosixPath('/Users/zissou/repos/affe')"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "f.root_dp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-25-655667435e2a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_with_log\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/repos/affe/src/affe/flow/Flow.py\u001b[0m in \u001b[0;36mrun_with_log\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m     88\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mrun_with_log\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 90\u001b[0;31m         \u001b[0me\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecutors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"local_log\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     91\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/repos/affe/src/affe/execs/DTAIExperimenterExecutor.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, workflow, log_filepath, timeout_s)\u001b[0m\n\u001b[1;32m     86\u001b[0m         \u001b[0mtimeout_s\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m     ):\n\u001b[0;32m---> 88\u001b[0;31m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mworkflow\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlog_filepath\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlog_filepath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeout_s\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtimeout_s\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     89\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflow_initialized\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_flow_initialized\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     90\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfuture\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_future\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/repos/affe/src/affe/execs/DTAIExperimenterExecutor.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, workflow, log_filepath, timeout_s, memory_mb)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0mDTAIExperimenterExecutor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mExecutor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mworkflow\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlog_filepath\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeout_s\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmemory_mb\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m         self.log_filepath = self.set_log_filepath(\n\u001b[0m\u001b[1;32m     14\u001b[0m             \u001b[0mworkflow\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlog_filepath\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlog_filepath\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         )  # This really has to happen first.\n",
+      "\u001b[0;32m~/repos/affe/src/affe/execs/DTAIExperimenterExecutor.py\u001b[0m in \u001b[0;36mset_log_filepath\u001b[0;34m(workflow, log_filepath)\u001b[0m\n\u001b[1;32m     50\u001b[0m             \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlog_filepath\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 52\u001b[0;31m         \u001b[0;32massert\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     53\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "f.run_with_log()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -891,9 +858,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "dp = "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
